Revision history for Path-Class-Rule

{{$NEXT}}

  [NEW FEATURES]

    - Added 'min_depth' and 'max_depth' rule methods

    - Added 'dangling' rule method to match dangling symlinks

    - Rule callbacks receive a hash reference for storing optional state

  [BUG FIXES]

    - Bumped Number::Compare prerequisite version to 0.02 to
      avoid uninitialized warnings when comparing numbers without
      a magnitude.

0.001     2011-09-11 22:40:44 America/New_York
  
    - Initial release
